--- a/IaC/xpipe-sindria/xpipe-vault/deployment.yaml
+++ b/IaC/xpipe-sindria/xpipe-vault/deployment.yaml
@@ -57,11 +57,12 @@ spec:
           capabilities:
             add:
               - IPC_LOCK
-        #lifecycle:
-        #  postStart:
-        #    exec:
-        #      command: [ "vault", "operator", "init", "-address=https://sindria-vault-xpipe.sindria.org", "-key-shares=5", "-key-threshold=2 > /vault/data/keys.txt" ]
-        #      # vault operator init -address=https://sindria-vault-xpipe.sindria.org -key-shares=5 -key-threshold=2 > /vault/data/keys.txt
+        lifecycle:
+          postStart:
+            exec:
+              command: [ "/bin/sh", "-c", "/post_start.sh" ]
+              #command: [ "vault", "operator", "init", "-address=https://sindria-vault-xpipe.sindria.org", "-key-shares=5", "-key-threshold=2 > /vault/data/keys.txt" ]
+              # vault operator init -address=https://sindria-vault-xpipe.sindria.org -key-shares=5 -key-threshold=2 > /vault/data/keys.txt
         #livenessProbe:
         #  failureThreshold: 3
         #  httpGet:
