Routines: update xpipe-no-backup-mysql

--- a/Routines/xpipe-no-backup-mysql/.env.example
+++ b/Routines/xpipe-no-backup-mysql/.env.example
@@ -9,7 +9,7 @@ APP_NAME=example
 
 # DB
 DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_NAME=postgres
-DB_USERNAME=postgres
+DB_PORT=3306
+DB_NAME=app
+DB_USERNAME=root
 DB_PASSWORD=secret
