Routines: update xpipe-no-backup-mysql

--- a/Routines/xpipe-no-backup-mysql/src/Dockerfile
+++ b/Routines/xpipe-no-backup-mysql/src/Dockerfile
@@ -1,6 +1,6 @@
 ARG ARCH
 ARG TAG_SUFFIX
-FROM ${ARCH}/mysql:${TAG_SUFFIX}
+FROM --platform=linux/${ARCH} mysql:${TAG_SUFFIX}
 
 ARG TAG_VERSION
 ARG TAG_SUFFIX
