Routines: update xpipe-no-backup-mysql

--- a/Routines/xpipe-no-backup-mysql/src/Dockerfile
+++ b/Routines/xpipe-no-backup-mysql/src/Dockerfile
@@ -44,8 +44,7 @@ RUN microdnf install -y \
     git \
     rsync \
     gcc \
-    make \
-    build-base && \
+    make && \
     microdnf clean all
 
 ## Install awscli
