--- a/IaC/xpipe-sindria/xpipe-vault/configmap.yaml
+++ b/IaC/xpipe-sindria/xpipe-vault/configmap.yaml
@@ -20,3 +20,5 @@ metadata:
 data:
   AWS_DEFAULT_REGION: "eu-central-1"
   APP_NAME: "xpipe-vault"
+  RESTORE_TAG: "latest"
+  RESTORE_SCHEMA: "app"
