--- a/IaC/xpipe-dev/xpipe-ecommerce/deployment.yaml
+++ b/IaC/xpipe-dev/xpipe-ecommerce/deployment.yaml
@@ -24,6 +24,27 @@ spec:
     spec:
       imagePullSecrets:
       - name: sindria-dockerhub
+      initContainers:
+        - name: init-lostfound
+          image: busybox
+          command: [ "sh", "-c", "rm -Rf /var/www/app/lost+found" ]
+          volumeMounts:
+            - mountPath: /var/www/app
+              name: xpipe-ecommerce-dev-volume
+          resources:
+            requests:
+              cpu: 10m
+              memory: 10Mi
+        - name: init-dev
+          image: busybox
+          command: [ "sh", "-c", "chown -R 1000:1000 /var/www/app" ]
+          volumeMounts:
+            - mountPath: /var/www/app
+              name: xpipe-ecommerce-dev-volume
+          resources:
+            requests:
+              cpu: 10m
+              memory: 10Mi
       containers:
       - env:
         - name: XPIPE_EXAMPLE
@@ -66,7 +87,7 @@ spec:
             secretKeyRef:
               key: XPIPE_CORE_ECOMMERCE_CRYPT_KEY
               name: xpipe-ecommerce-secret
-        image: sindriaproject/xpipe-ecommerce:1.0.2
+        image: sindriaproject/xpipe-ecommerce:1.0.3
         imagePullPolicy: Always
         #securityContext:
         #  capabilities:
@@ -86,6 +107,8 @@ spec:
         ports:
         - containerPort: 80
           protocol: TCP
+        - containerPort: 2222
+          protocol: TCP
         #readinessProbe:
         #  failureThreshold: 3
         #  httpGet:
@@ -103,17 +126,17 @@ spec:
             memory: 8192Mi
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
-        #volumeMounts:
-        #- mountPath: /tmp/cmf
-        #  name: xpipe-ecommerce-volume
+        volumeMounts:
+        - mountPath: /var/www/app
+          name: xpipe-ecommerce-dev-volume
       dnsPolicy: ClusterFirst
       #hostNetwork: true
       restartPolicy: Always
       schedulerName: default-scheduler
       terminationGracePeriodSeconds: 30
-      #volumes:
-      #- name: xpipe-ecommerce-volume
-      #  persistentVolumeClaim:
-      #    claimName: xpipe-ecommerce-pvc
-      #    #defaultMode: 420
+      volumes:
+      - name: xpipe-ecommerce-dev-volume
+        persistentVolumeClaim:
+          claimName: xpipe-ecommerce-dev-pvc
+          #defaultMode: 420
 ---
