--- a/IaC/xpipe-dev/xpipe-ecommerce/service.yaml
+++ b/IaC/xpipe-dev/xpipe-ecommerce/service.yaml
@@ -12,6 +12,10 @@ spec:
     port: 80
     protocol: TCP
     targetPort: 80
+  - name: ssh
+    port: 2222
+    protocol: TCP
+    targetPort: 2222
   selector:
     app: xpipe-ecommerce
   sessionAffinity: None
