BaseImages: patch nginx-php local

--- a/BaseImages/nginx-php/local/src/resources/supervisor/conf.d/sshd.conf
+++ b/BaseImages/nginx-php/local/src/resources/supervisor/conf.d/sshd.conf
@@ -1,5 +1,5 @@
 [program:sshd]
-command=/usr/sbin/sshd -f /home/sindria/custom_ssh/sshd_config
+command=/usr/sbin/sshd -D -e -f /home/sindria/custom_ssh/sshd_config
 numprocs=1
 autostart=true
 autorestart=true
